--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version> <!-- Dernière version stable -->
+        </dependency>
     </dependencies>
 
     <!-- Configuration du build -->
